--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "lint": "eslint --ext .ts,.js */**/* --quiet --fix",
+    "lint": "eslint \"*/**/*.{js,ts}\" --quiet --fix",
     "start": "npm run build && node ./dist/server.js",
-    "start:dev": "ts-node-dev ./src/server.ts"
+    "start:dev": "ts-node-dev ./src/server.ts",
+    "docker-init": "docker volume create pgdata && docker-compose up --build -d",
+    "docker-teardown": "docker-compose down && docker volume rm pgdata",
+    "docker-init:dev": "docker volume create pgdata && docker-compose -f docker/docker-compose.yml -f docker/docker-compose.dev.yml up --build -d",
+    "docker-teardown:dev": "docker-compose -f docker/docker-compose.yml -f docker/docker-compose.dev.yml down && docker volume rm pgdata"
   },
   "keywords": [],
   "author": "",
