--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -2,8 +2,8 @@ version: '3'
 services:
   api:
     build:
-      context: .
-      dockerfile: dev.Dockerfile
+      context: ..
+      dockerfile: ./docker/dev.Dockerfile
     ports:
     - 3000:${PORT}/tcp
     volumes:
