--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint \"*/**/*.{js,ts}\" --quiet --fix",
     "start": "npm run build && node ./dist/server.js",
     "start:dev": "ts-node-dev ./src/server.ts",
-    "docker-init": "docker volume create pgdata && docker-compose up --build -d",
-    "docker-teardown": "docker-compose down && docker volume rm pgdata",
+    "docker-init": "docker volume create pgdata && docker-compose -f docker/docker-compose.yml up --build -d",
+    "docker-teardown": "docker-compose -f docker/docker-compose.yml down && docker volume rm pgdata",
     "docker-init:dev": "docker volume create pgdata && docker-compose -f docker/docker-compose.yml -f docker/docker-compose.dev.yml up --build -d",
     "docker-teardown:dev": "docker-compose -f docker/docker-compose.yml -f docker/docker-compose.dev.yml down && docker volume rm pgdata"
   },
