--- a/package.json
+++ b/package.json
@@ -4,35 +4,39 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --project ./tsconfig.production.json",
     "test": "jest",
     "lint": "eslint \"*/**/*.{js,ts}\" --quiet --fix",
     "start": "npm run build && node ./dist/server.js",
     "start:dev": "ts-node-dev ./src/server.ts",
-    "docker-init": "docker volume create pgdata && docker-compose -f docker/docker-compose.yml up --build -d",
-    "docker-teardown": "docker-compose -f docker/docker-compose.yml down && docker volume rm pgdata",
-    "docker-init:dev": "docker volume create pgdata && docker-compose -f docker/docker-compose.yml -f docker/docker-compose.dev.yml up --build -d",
-    "docker-stop:dev": "docker container stop express-bootstrap-api express-bootstrap-db",
-    "docker-teardown:dev": "docker-compose -f docker/docker-compose.yml -f docker/docker-compose.dev.yml down && docker volume rm pgdata"
+    "docker:start": "docker volume create pgdata && docker-compose -f docker/docker-compose.yml up --build -d",
+    "docker:teardown": "docker-compose -f docker/docker-compose.yml down && docker volume rm pgdata",
+    "docker:start:dev": "docker volume create pgdata && docker-compose -f docker/docker-compose.yml -f docker/docker-compose.dev.yml up --build -d",
+    "docker:stop:dev": "docker container stop express-bootstrap-api express-bootstrap-db",
+    "docker:teardown:dev": "docker-compose -f docker/docker-compose.yml -f docker/docker-compose.dev.yml down && docker volume rm pgdata"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.31",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
+    "@types/node": "^14.14.33",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
     "eslint": "^7.21.0",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^5.1.3",
+    "husky": "^4.3.8",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
