--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest",
     "lint": "eslint \"*/**/*.{js,ts}\" --quiet --fix",
     "start": "npm run build && node ./dist/server.js",
-    "start:dev": "ts-node-dev ./src/server.ts",
+    "start:dev": "ts-node-dev ./src/server.ts | pino-pretty",
     "docker:start": "docker volume create pgdata && docker-compose -f docker/docker-compose.yml up --build -d",
     "docker:teardown": "docker-compose -f docker/docker-compose.yml down && docker volume rm pgdata",
     "docker:start:dev": "docker volume create pgdata && docker-compose -f docker/docker-compose.yml -f docker/docker-compose.dev.yml up --build -d",
@@ -22,13 +22,17 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^4.4.1"
+    "helmet": "^4.4.1",
+    "pino": "^6.11.2",
+    "pino-http": "^5.5.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.33",
+    "@types/pino": "^6.3.6",
+    "@types/pino-http": "^5.4.0",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "eslint": "^7.21.0",
@@ -39,6 +43,7 @@
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
+    "pino-pretty": "^4.7.1",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.3",
     "ts-node-dev": "^1.1.6",
