Fixed docker files to function as expected from docker directory. Further Docker improvements planned.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,25 +5,26 @@ services:
     env_file:
       - ../.env
     build:
-      context: ..
+      context: ../
       dockerfile: ./docker/Dockerfile
     ports:
     - 3000:${PORT}/tcp
-    links:
-      - db
-  db:
-    container_name: express-bootstrap-db
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
-    image: postgres:latest
-    ports:
-    - 7896:5432/tcp
-    volumes:
-    - ../dev/db-scripts/:/docker-entrypoint-initdb.d/
-    - pgdata:/var/lib/postgresql/data
-    restart: always
+# The following can be brought back if you want to introduce a db service to this template
+#    links:
+#      - db
+#  db:
+#    container_name: express-bootstrap-db
+#    environment:
+#      - POSTGRES_USER=${POSTGRES_USER}
+#      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+#      - POSTGRES_DB=${POSTGRES_DB}
+#    image: postgres:latest
+#    ports:
+#    - 7896:5432/tcp
+#    volumes:
+#    - ../dev/db-scripts/:/docker-entrypoint-initdb.d/
+#    - dbdata:/var/lib/postgresql/data
+#    restart: always
 volumes:
-  pgdata:
+  dbdata:
     external: true
