--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "express-bootstrap",
+  "name": "express-ts-bootstrap",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
+    "prepare": "husky install",
     "build": "tsc --project ./tsconfig.production.json",
     "test": "jest",
     "lint": "eslint \"*/**/*.{js,ts}\" --quiet --fix",
@@ -39,7 +40,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^4.3.8",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "pino-pretty": "^4.7.1",
