--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "start:dev": "ts-node-dev ./src/server.ts | pino-pretty",
     "docker:start": "docker volume create dbdata && docker-compose --env-file .env -f docker-compose.yml up --build -d",
     "docker:teardown": "docker-compose --env-file .env -f docker-compose.yml down && docker volume rm dbdata",
-    "docker:start:dev": "docker volume create dbdata && docker-compose --env-file .env -f docker-compose.yml -f docker-compose.dev.yml up --build -d",
-    "docker:teardown:dev": "docker-compose --env-file .env -f docker-compose.yml -f docker-compose.dev.yml down && docker volume rm dbdata"
+    "docker:start:dev": "docker volume create dbdata && docker compose --env-file .env -f docker-compose.yml -f docker-compose.dev.yml up --build -d",
+    "docker:teardown:dev": "docker compose --env-file .env -f docker-compose.yml -f docker-compose.dev.yml down && docker volume rm dbdata"
   },
   "keywords": [],
   "author": "",
@@ -28,17 +28,17 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.11",
+    "@types/express": "^4.17.12",
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.33",
+    "@types/node": "^14.17.2",
     "@types/pino": "^6.3.6",
     "@types/pino-http": "^5.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.17.0",
-    "@typescript-eslint/parser": "^4.17.0",
-    "eslint": "^7.21.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
+    "eslint": "^7.27.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
@@ -47,6 +47,6 @@
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.3",
     "ts-node-dev": "^1.1.6",
-    "typescript": "^4.2.3"
+    "typescript": "^4.3.2"
   }
 }
